--- a/src/main/java/com/semicolon/campusnestproject/Dockerfile
+++ b/src/main/java/com/semicolon/campusnestproject/Dockerfile
@@ -1,8 +1,9 @@
-FROM maven:3.9.4-eclipse-temurin-21-alpine as build
-COPY . .
-RUN mvn clean package -DskipTests
-
-FROM openjdk:21-jdk
-COPY --from=build /target/CampusNestProject-1.0-SNAPSHOT.jar CampusNestProject.jar
-EXPOSE 8080
-ENTRYPOINT ["java", "-jar", "CampusNestProject.jar"]
+#FROM maven:3.8.6 t
+#COPY . .
+#RUN mvn package -DskipTests
+#
+#FROM openjdk:21-jdk
+#COPY --from=build /target/CampusNestProject-0.0.1-SNAPSHOT.jar CampusNest.jar
+#EXPOSE 8080
+#ENTRYPOINT ["java","-jar","CampusNestProject.jar"]
+#
